refs #3, add explanation

--- a/Clearfix/clearfix.css
+++ b/Clearfix/clearfix.css
@@ -1,4 +1,4 @@
-.clearfix::after{
+.clearfix::after {
     background: #8385aa;
     content: 'after';
     display: block;
@@ -6,9 +6,19 @@
     padding: 20px;
 }
 
-.floated{
+.floated {
     padding: 10px;
     margin: 1rem;
     background-color: #7983ff;
     float: left;
+}
+
+p.f1 {
+    float: left;
+    width: 100px;
+}
+
+p.f2 {
+    float: left;
+    width: 400px;
 }
